# Rusty

./: .gitignore  Book1.csv  Book1.rar  Book1.xls  Book1.xlsx  Cargo.toml  README.md
algo/basics/: conditions_loops.rs  operators.rs  scope.rs
algo/data-types/: data_types.rs
algo/documents/: Rusty II.rs  marty.rs  rusty.rs
algo/ownerships/: borrowing.rs  ownership_functions_II.rs  ownerships_function.rs
algo/tutorials/: fibonacci.rs  guessing_number.rs  storing-ip.rs
src/: main.rs  test.sh
src/basics/: FileOpening.rs  FileOpeningSummary.rs  conditions_loops.rs  operators.rs  option_null.rs  scope.rs
src/cli_test/: Cargo.toml
src/closures/: advanced.rs  advancedv2.rs  advancedv3.rs  cacheleme.rs  closures_and_generic_mysolution_wrong.rs  closures_and_generics_correct_solution.rs  intro.rs  iterator_sample.rs  iterator_samplev2.rs  sample.rs
src/concurrency/: basics.rs  docs.rs  messaging.rs  mutexes.rs
src/error_handling/: Cargo.toml  basics.rs
src/new_crate/: Cargo.toml
src/new_crate/src/: lib.rs  main.rs
src/oop/: docs.rs  (+1 more)
src/packaging/packaging/: Cargo.toml
src/packaging/packaging/src/: main.rs  threedim.rs
src/packaging/packaging/src/excel_importer/: Cargo.toml
src/packaging/packaging/src/excel_importer/src/: analyzer.rs  lib.rs  reader.rs
src/packaging/packaging/src/excel_importer/src/analyzer/: csvanalyzer.rs
src/packaging/packaging/src/excel_importer/src/reader/: csvreader.rs
src/packaging/packaging/src/excel_importer/test_data/: iotDevices.csv
src/packaging/packaging/src/threedim/: triangle.rs
tests/: integration_tests.rs
(+103 files in other folders)
