[package]
name = "Rusty"
version = "0.1.0"
authors = ["umut <ucok.umut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[lib]
name = "mocktesting"
path = "src/mocktesting/src/lib.rs"

[gui]
name = "gui"
path = "src/gui/src/lib.rs"