[package]
name = "Rusty"
version = "0.1.0"
authors = ["umut <ucok.umut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# we add these lines after read error handling which is in src/error_handling folder
[profile.release]
panic = 'abort'