[package]
name = "testcrate_umut"
version = "0.1.0"
authors = ["Umut Ucok <ucok.umut@gmail.com>"]
edition = "2018"
description = "Just test crate for myself - ignore it"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


