[package]
name = "packaging"
version = "0.1.0"
authors = ["umut ucok <ucok.umut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# LOOK HERE !!!
excel_importer = {path = "/home/umut/CLionProjects/Rusty/src/packaging/packaging/src/excel_importer"}